Task 2/task.yaml
kind: Pod
apiVersion: v1
metadata:
  name: juice-shop-app
  labels:
    app: juice-shop
spec:
  containers:
    - name: juice-shop-app
      image: 'bkimminich/juice-shop'
---
kind: Service
apiVersion: v1
metadata:
  name: juice-shop-service
spec:
  selector:
    app: juice-shop
  ports:
    - port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juice-shop-ingress
spec:
  rules:
    - host: juice-shop.com
      http: 
        paths:
          - pathType: Prefix
            path: /juice-shop
            backend:
              service:
                name: juice-shop-service
                port:
                  number: 8080
---
